# dotfiles

./: .gitignore  README.md  default.nix  dirs.nix  flake.nix  heyw  shell.nix  yow
.config/VSCodium/User/: settings.json
.github/: build.yml
.github/workflows/: build.yml  check-pr.yml  update.yml
config/Code/: keybindings.json  settings.json
config/alacritty/: alacritty.yml
config/autostart/: Emacs.desktop  Ulauncher.desktop
config/dconf/: dconf.nix  dconf.settings
config/doom/: config.el  init.el
config/fish/: config.fish
config/kmonad/: config.kbd  keychron.kbd
config/lf/: lfrc
config/nvim/: cmp.lua  dirbuf.lua  gruvbox.lua  init.lua  lspsaga.lua  nvim-treesitter.lua  parinfer.lua  settings.vim  telescope.lua  user_init.lua  vscode.lua  vscode_mappings.vim
config/ranger/: commands.py  rc.conf
config/tmux/: tmux.conf
config/wezterm/: wezterm.lua
config/zed/: keymap.json  settings.json
host_template/: default.nix
hosts/desktop/: default.nix  hardware-configuration.nix
hosts/vbox/: default.nix  hardware-configuration.nix
hosts/zephyrus/: default.nix  hardware-configuration.nix
lib/: attrs.nix  default.nix  hosts.nix  lists.nix  modules.nix  options.nix  utils.nix
modules/: default.nix  fonts.nix  kanata.kbd  kanata.nix  kmonad.nix  nix.nix  options.nix  presets.nix  user_modules.nix  users_modules.nix
modules/boot/: grub.nix  systemd-boot.nix
modules/desktop/: default.nix  gnome.nix  kde.nix
modules/hardware/: default.nix  microcode.nix  opengl.nix
modules/virtualisation/: docker.nix  podman.nix  spice.nix  virtmanager.nix  virtualbox.nix
templates/: default.nix
templates/shell/: flake.nix
user_modules/: default.nix  fonts.nix  kmonad.nix  link.nix  options.nix  presets.nix  shell.nix  shells.nix  warnings.nix
user_modules/browsers/: firefox.nix
user_modules/desktop/: dconf.nix  default.nix  gnome.nix  kde.nix  theme.nix
user_modules/dev/: agda.nix  cc.nix  coq.nix  default.nix  haskell.nix  idris.nix  java.nix  javascript.nix  latex.nix  lean.nix  lua.nix  markdown.nix  ocaml.nix  python.nix  racket.nix  rust.nix
user_modules/editors/: default.nix  emacs.nix  jetbrains.nix  test.md  vim.nix  vscode.nix
user_modules/shell/: bash.nix  default.nix  fish.nix  git.nix  lf.nix  ranger.nix  tmux.nix  zsh.nix
user_modules/terminals/: gnome-terminal.nix
x/: Cargo.toml  shell.nix
x/src/: clean_nix.rs  commit.rs  main.rs  use_nix.rs
x/templates/cabal/: LICENSE  {{name}}.cabal
x/templates/cabal/test/: Main.hs
yo/: Cargo.toml  default.nix  flake.nix  result
yo/src/: main.rs
(+51 files in other folders)
