[package]
name = "x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["suggestions", "color", "derive", "wrap_help", "cargo"] }
mustache = "0.9.0"
xshell = "0.2.5"
